# stone

./: README.md
clouvm/: Cargo.toml  build.rs
clouvm/src/: main.rs
handled/: agent.py
mcos/: Cargo.toml  build.rs
mcos/src/: main.rs
shared/: stone.proto
